模块之间跳转的优化

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -51,12 +51,12 @@ button {
   }
 }
 .hashTitle {
-  color: white;
+  color: black;
 }
 
  h2, h3, h4, h5, h6 {
   padding-top: 0.8rem;
-  color: #F0F0F0;
+  color: #000;
 }
 
 
